tests/samples/invalid/assign_array_to_array.pn
fn main() -> i32
{
	var x: [3]i32 = [
		0,
		50,
		150,
	];
	var z: [3]i32 = x;
	z[2] = 99;
	var result = x[1] + z[2];
	return: result
}
